Fix hover/focus color (contrast issue)

--- a/src/_components/shortcodes/pagehero/pagehero.css
+++ b/src/_components/shortcodes/pagehero/pagehero.css
@@ -110,6 +110,7 @@
 .hero-content a:focus {
     background-color: transparent;
     text-decoration: underline;
+    color: currentColor;
 }
 
 .hero--single-blog .hero-graphic::after,
